; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/win32/extr_direct3d9.c_Direct3D9LoadShaderLibrary.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/win32/extr_direct3d9.c_Direct3D9LoadShaderLibrary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"D3dx9_%d.dll\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @Direct3D9LoadShaderLibrary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @Direct3D9LoadShaderLibrary() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca [16 x i32], align 16
  store i32* null, i32** %1, align 8
  store i32 43, i32* %2, align 4
  br label %4

4:                                                ; preds = %20, %0
  %5 = load i32, i32* %2, align 4
  %6 = icmp sgt i32 %5, 23
  br i1 %6, label %7, label %23

7:                                                ; preds = %4
  %8 = getelementptr inbounds [16 x i32], [16 x i32]* %3, i64 0, i64 0
  %9 = getelementptr inbounds [16 x i32], [16 x i32]* %3, i64 0, i64 0
  %10 = call i32 @ARRAY_SIZE(i32* %9)
  %11 = call i32 @TEXT(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @_snwprintf(i32* %8, i32 %10, i32 %11, i32 %12)
  %14 = getelementptr inbounds [16 x i32], [16 x i32]* %3, i64 0, i64 0
  %15 = call i32* @LoadLibrary(i32* %14)
  store i32* %15, i32** %1, align 8
  %16 = load i32*, i32** %1, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %7
  br label %23

19:                                               ; preds = %7
  br label %20

20:                                               ; preds = %19
  %21 = load i32, i32* %2, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %2, align 4
  br label %4

23:                                               ; preds = %18, %4
  %24 = load i32*, i32** %1, align 8
  ret i32* %24
}

declare dso_local i32 @_snwprintf(i32*, i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @TEXT(i8*) #1

declare dso_local i32* @LoadLibrary(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
